--- a/The_code/index.html
+++ b/The_code/index.html
@@ -4,10 +4,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
   <link rel="stylesheet" href="style.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Fraunces:ital,opsz,wght@0,9..144,100;0,9..144,200;0,9..144,300;0,9..144,400;0,9..144,500;0,9..144,600;0,9..144,700;0,9..144,800;0,9..144,900;1,9..144,100;1,9..144,200;1,9..144,300;1,9..144,400;1,9..144,500;1,9..144,600;1,9..144,700;1,9..144,800;1,9..144,900&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
@@ -16,47 +12,61 @@
 </head>
 <body>
   <main>
+    <!-- HTML guide  https://fedmentor.dev/posts/html-plan-product-preview/ -->
+
+    <!-- Product Card -->
     <div class="big-box">
-      <div class="image-area">
-        <!--Two images, one for mobile and another for desktop-->
-        <img class="image-product-desktop" src="../images/image-product-desktop.jpg" alt="Image product for desktop screens">
-        <img class="image-product-mobile" src="../images/image-product-mobile.jpg" alt="Image product for mobile screens">
+  
+      <!-- Image half of the card-->
+      <div class="image-area box1">
+        <!-- images -->
+        <picture>
+          <source srcset="../mages/image-product-mobile.jpg" media="(max-width: 895px)">
+          <source srcset="../images/image-product-desktop.jpg" media="(min-width: 896px)">
+          <img src="./images/image-product-mobile.jpg" class="image-product" alt="product image for mobile screens">
+        </picture>
       </div>
-      
-      <div class="info-area">
-        <div class="text-area">
-            <div class="text-area-top">
-              <p>Perfume</p>
-            </div>
-            <div class="text-area-middle">
-              <h1>Gabrielle Essence Eau De Parfum </h1>
-            </div>
-            <div class="text-area-bottom">
-              <p>
-                A floral, solar and voluptuous interpretation composed by Olivier Polge, 
-                Perfumer-Creator for the House of CHANEL.
-              </p>
-            </div>
-        </div>
-        
-        <div class="price-info">
-          <h1> $149.99</h2>
-          <p> $169.99</p>
-        </div>
-        <button class="cart-button">
-          <img src="../images/icon-cart.svg" alt="">
-          Add to Cart
+  
+      <!-- Text half of the card-->
+      <div class="info-area box2">
+        <hgroup>
+          <!-- Ribbon Text -->
+          <p class="text-area-top">Perfume</p>
+          <!-- Product name -->
+          <h2 class="text-area-middle">Gabrielle Essence Eau De Parfum</h2>
+        </hgroup>
+  
+        <!-- Product Description -->
+        <p class="text-area-bottom">
+          A floral, solar and voluptuous interpretation composed by Olivier Polge, 
+          Perfumer-Creator for the House of CHANEL.
+        </p>
+  
+        <!-- Prices -->
+        <p class="price-info">
+          <!-- Current Price -->
+          <span class="new-price-info">$149.99</span>
+          <!-- Old Price -->
+          <s class="old-price-info">$169.99</s> <!-- Strike through. <del> element can also be used -->
+        </p>
+  
+        <!-- CTA -->
+        <!-- For decorative images, you must leave the alt intentionally blank -->
+        <button type="button" class="cart-button">
+          <img src="./images/icon-cart.svg" alt="">
+          <span>  Add to Cart</span>
         </button>
       </div>
+  
     </div>
   </main>
-
 
   <footer>
     <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
+      Coded by <a href="https://github.com/Singraft">Singraft</a>.
     </div>
   </footer>
+
 </body>
 </html>
